# serializer version: 1
# name: test_empty
  dict({
    '.gitkeep': '',
  })
# ---
# name: test_monorepo
  dict({
    'package.json': '''
      {
        "name": "monorepo"
      }
  
    ''',
    'packages/README.md': '''
      # monorepo
  
    ''',
    'packages/npm/README.md': '''
      # Test NPM Package
      
      [![NPM version](https://img.shields.io/npm/v/test-npm-package)](https://www.npmjs.com/package/test-npm-package)
      [![NPM downloads](https://img.shields.io/npm/dm/test-npm-package)](https://www.npmjs.com/package/test-npm-package)
      [![NPM license](https://img.shields.io/npm/l/test-npm-package)](https://www.npmjs.com/package/test-npm-package)
      
      
      This is a test README for an NPM package.
  
    ''',
    'packages/npm/package.json': '''
      {
        "name": "test-npm-package",
        "version": "1.0.0"
      }
  
    ''',
  })
# ---
# name: test_no_readme
  dict({
    'package.json': '''
      {
        "name": "test-npm-package",
        "version": "1.0.0"
      }
  
    ''',
  })
# ---
# name: test_npm
  dict({
    'README.md': '''
      # Test NPM Package
      
      [![NPM version](https://img.shields.io/npm/v/test-npm-package)](https://www.npmjs.com/package/test-npm-package)
      [![NPM downloads](https://img.shields.io/npm/dm/test-npm-package)](https://www.npmjs.com/package/test-npm-package)
      [![NPM license](https://img.shields.io/npm/l/test-npm-package)](https://www.npmjs.com/package/test-npm-package)
      
      
      This is a test README for an NPM package.
  
    ''',
    'package.json': '''
      {
        "name": "test-npm-package",
        "version": "1.0.0"
      }
  
    ''',
  })
# ---
# name: test_npm_private
  dict({
    'README.md': '''
      # Test NPM Package
      
      This is a test README for an NPM package.
  
    ''',
    'package.json': '''
      {
        "name": "test-npm-package",
        "version": "1.0.0",
        "private": true
      }
  
    ''',
  })
# ---
